<resources>
    <string name="app_name">ZarGroup</string>
    <string name="welcomeToApp">به نرم افزار هلدینگ زر خوش آمدید.</string>
    <string name="designer">طراحی و توسعه توسط تیم نرم افزار هلدینگ زر</string>
    <string name="pleaseEnterUserPass">لطفا نام کاربری و رمز ورود خود را وارد کنید</string>
    <string name="disableFeature">این قابلیت بزودی راه اندازی میشود</string>
    <string name="userName">نام کاربری</string>
    <string name="passcode">رمز ورود</string>
    <string name="enter">ورود</string>
    <string name="home">صفحه اصلی</string>
    <string name="tripAndMap">سرویس و نقشه</string>
    <string name="adminPanel">پنل مدیریت</string>
    <string name="service">سرویس</string>
    <string name="agency">آژانس</string>
    <string name="personnelList">لیست پرسنل</string>
    <string name="foodReservation">رزرو غذا</string>
    <string name="taxiReservationDot">رزرو تاکسی :</string>
    <string name="chooseTaxiType">انتخاب نوع تاکسی :</string>
    <string name="chooseTaxiDriver">انتخاب راننده :</string>
    <string name="companyDriver">راننده شرکت</string>
    <string name="agencyDriver">راننده آژانس</string>
    <string name="giftCard">بن کارت</string>
    <string name="comingSoon">به زودی</string>
    <string name="view">مشاهده</string>
    <string name="showNews">مشاهده خبر</string>
    <string name="personnelRequest">درخواست پرسنل</string>
    <string name="bePatient">شکیبا باشید…</string>
    <string name="bePatientToLoadMap">درحال دریافت مسیر، شکیبا باشید …</string>
    <string name="all">همه</string>
    <string name="yesterday">دیروز</string>
    <string name="today">امروز</string>
    <string name="todayDate">تاریخ امروز</string>
    <string name="readAllNotification">خواندن کل اعلانات</string>
    <string name="readChecked">خواندن انتخاب شده ها</string>
    <string name="profile">پروفایل</string>
    <string name="personalInformation">اطلاعات کاربری</string>
    <string name="messages">پیام ها</string>
    <string name="news">خبرنامه ها</string>
    <string name="trainings">آموزش ها</string>
    <string name="logout">خروج از حساب کاربری</string>
    <string name="setting">تنظیمات</string>
    <string name="dataReceivedIsEmpty">اطلاعات دریافت شده خالی است</string>
    <string name="dataSendingIsEmpty">اطلاعات ارسالی خالی است</string>
    <string name="userServiceIsEmpty">سرویس های شما خالی است</string>
    <string name="appSupportTeam">پشتیبانی نرم افزار هلدینگ زر</string>
    <string name="sendTicket">ارسال تیکت</string>
    <string name="activeDarkTheme">فعال کردن تم دارک</string>
    <string name="loginByFingerPrint">ورود از طریق اثر انگشت</string>
    <string name="getNews">دریافت خبرنامه</string>
    <string name="changePasscode">تغییر رمز عبور</string>
    <string name="myService">سرویس های من</string>
    <string name="listOfService">لیست سرویس ها</string>
    <string name="reserveService">درخواست رزرو این سرویس</string>
    <string name="deleteService">حذف سرویس</string>
    <string name="pendingForAccept">در انتظار تایید</string>
    <string name="confirmedByOfficial">تایید شده توسط اداری</string>
    <string name="reject">عدم تایید</string>
    <string name="rejected">عدم تایید به دلیل</string>
    <string name="dismiss">بستن</string>
    <string name="stations">ایستگاه ها</string>
    <string name="origin">مبدا</string>
    <string name="originDot">مبدا :</string>
    <string name="destination">مقصد</string>
    <string name="destinationDot">مقصد :</string>
    <string name="userNameIsEmpty">نام کاربری را وارد نمایید</string>
    <string name="passcodeIsEmpty">رمز ورود را وارد نمایید</string>
    <string name="chooseStation">ایستگاه را انتخاب کنید</string>
    <string name="taxiReservation">درخواست آژانس</string>
    <string name="taxiReservationConfirm">تاییدیه آژانس</string>
    <string name="receivingMoreItems">درحال دریافت موارد بیشتر</string>
    <string name="requests">درخواست ها</string>
    <string name="historyOfRequests">تاریخچه درخواست ها</string>
    <string name="myRequests">درخواست های من</string>
    <string name="departure">رفت</string>
    <string name="returning">رفت و برگشت</string>
    <string name="applicator">درخواست کننده : %1$s</string>
    <string name="doYouWantToExitApp">آیا برای خروج از برنامه مطمئن هستید؟</string>
    <string name="pleaseSelectPlaceOfOrigin">لطفا لوکیشن مبدا را انتخاب کنید</string>
    <string name="pleaseSelectPlaceOfDestination">لطفا لوکیشن مقصد را انتخاب کنید</string>
    <string name="pleaseSelectDriver">لطفا راننده را انتخاب کنید</string>
    <string name="originAndDestination">مبدا - مقصد : </string>
    <string name="approver">تصویب کننده :</string>
    <string name="departureDate">تاریخ رفت : </string>
    <string name="returnDate">تاریخ برگشت : </string>
    <string name="departureReturnDate">تاریخ رفت - برگشت : </string>
    <string name="departureReturnTime">ساعت رفت - برگشت : </string>
    <string name="dateDot">تاریخ :</string>
    <string name="date">تاریخ</string>
    <string name="yes">بله</string>
    <string name="confirm">تایید</string>
    <string name="confirmed">تایید شده</string>
    <string name="departureTimeDot">ساعت رفت :</string>
    <string name="departureTime">ساعت رفت</string>
    <string name="_return">برگشت</string>
    <string name="returnTime">ساعت برگشت</string>
    <string name="returnTimeDot">ساعت برگشت :</string>
    <string name="choose">انتخاب</string>
    <string name="no">خیر</string>
    <string name="send">ارسال</string>
    <string name="cancel">انصراف</string>
    <string name="search">جستجو</string>
    <string name="searchLoadMore">جستجوی موارد بیشتر</string>
    <string name="showAllNews">مشاهده تمام خبرها</string>
    <string name="confirmChecked">تایید نشان شده ها</string>
    <string name="rejectChecked">عدم تایید نشان شده ها</string>
    <string name="reTry">تلاش دوباره</string>
    <string name="chooseFromList">انتخاب از لیست</string>
    <string name="alphabet">حرف</string>
    <string name="iran">ایران</string>
    <string name="carHint">--</string>
    <string name="passengers">مسافران</string>
    <string name="passengersDot">مسافران :</string>
    <string name="sendInformation">ارسال اطلاعات</string>
    <string name="reasonOfTrip">علت سفر</string>
    <string name="reasonOfTripDot">علت سفر :</string>
    <string name="duplicateInsert">این مورد قبلا ثبت شده است</string>
    <string name="requester">درخواست کننده : %1$s</string>
    <string name="setThreeString">%1$s - %2$s - %3$s</string>
    <string name="setTwoString">%1$s - %2$s</string>
    <string name="setTwoStringDot">%1$s : %2$s</string>
    <string name="setTwoStringSlash">%1$s / %2$s</string>
    <string name="setDate">%1$s/%2$s/%3$s</string>
    <string name="personalCodeDote">کد پرسنلی : %1$s</string>
    <string name="personalCode">کد پرسنلی</string>
    <string name="attendanceTime">ساعت حضور : %1$s</string>
    <string name="myStation">ایستگاه من : %1$s</string>
    <string name="minuteAgo">%1$s دقیقه پیش</string>
    <string name="dayAgo">%1$s روز پیش</string>
    <string name="hoursAgo">%1$s ساعت پیش</string>
    <string name="taxiRequestIsConfirm">درخواست سرویس آقا/خانم %1$s تایید شد.</string>
    <string name="confirmForTaxiRequestRegister">آیا برای تایید درخواست آژانس آقا/خانم %1$s مطمئن هستید؟</string>
    <string name="confirmForTripRequestRegister">آیا برای تایید درخواست رزرو سرویس های انتخابی مطمئن هستید؟</string>
    <string name="confirmForDelete">آیا برای حذف %1$s مطمئن هستید؟</string>
    <string name="confirmForRegisterStation">آیا برای رزرو %1$s در سرویس %2$s مطمئن هستید؟</string>
    <string name="confirmFavPlace">آیا برای اضافه کردن این مکان به لیست علاقه مندی ها مطمئن هستید؟</string>
    <string name="enterPlaceName">یک نام کوتاه برای این محل وارد کنید</string>
    <string name="placeName">نام محل</string>
    <string name="destinationLocationSelected">شما مقصد را انتخاب کرده اید، لطفا مقصد را حذف کنید و دوباره تلاش کنید</string>
    <string name="pleaseChooseLocation">لطفا یک مکان را انتخاب نمایید</string>
    <string name="addressSuggestionHint">جستجوی خیابان، کوچه، …</string>
    <string name="cityName">نام شهر</string>
    <string name="carEntityType">cars</string>
    <string name="driversEntityType">drivers</string>
    <string name="articlesEntityType">articles</string>
    <string name="cityIsEmpty">لطفا شهر را وارد نمایید</string>
    <string name="addressIsEmpty">لطفا آدرس را وارد نمایید</string>
    <string name="responseIsEmpty">اطلاعات دریافتی خالی می باشد</string>
    <string name="responseSlideIsEmpty">اسلاید های دریافتی خالی می باشد</string>
    <string name="responseArticleIsEmpty">خبرنامه های دریافتی خالی می باشد</string>
    <string name="responseUserInfoIsEmpty">اطلاعات کاربر خالی می باشد</string>
    <string name="messagePreviousStationReached">سرویس شما به ایستگاه قبلی رسید</string>
    <string name="selectedDateIsThePast">تاریخ انتخاب شده در گذشته است</string>
    <string name="selectedTimeIsThePast">ساعت انتخاب شده در گذشته است</string>
    <string name="theReturnTimeIsBeforeTheDepartureTime">ساعت برگشت قبل از ساعت رفت است</string>
    <string name="biometricNoHardware">دستگاه شما فاقد سنسور اثر انگشت است</string>
    <string name="onAuthenticationError">اثر انگشت شما تایید نشد</string>
    <string name="actionIsDone">عملیات با موفقیت انجام شد</string>
    <string name="chooseItemsIsEmpty">هیچ موردی انتخاب نشده اشت</string>
    <string name="pleaseEnterTheReason">لطفا دلیل را وارد نمایید</string>
    <string name="pleaseEnterName">لطفا نام را وارد نمایید</string>
    <string name="reasonOfReject">علت عدم تایید :</string>
    <string name="reasonOfReject1">علت عدم تایید : %1$s</string>
    <string name="reasonText">متن علت</string>
    <string name="selectTheDepartureDate">لطفا تاریخ رفت را انتخاب نمایید</string>
    <string name="selectTheReturnDate">لطفا تاریخ برگشت را انتخاب نمایید</string>
    <string name="selectTheDepartureTime">لطفا ساعت رفت را انتخاب نمایید</string>
    <string name="selectTheReturnTime">لطفا ساعت برگشت را انتخاب نمایید</string>
    <string name="theReturnDateIsBeforeTheDepartureDate">تاریخ برگشت قبل از تاریخ رفت است</string>
    <string name="searchPlace">جستجوی آدرس</string>
    <string name="companyDot">شرکت :</string>
    <string name="pleaseSelectCompany">لطفا شرکت را انتخاب کنید</string>
    <string name="companyIsSelect">شرکت انتخاب شده است، آیا میخواهید آنرا تغییر دهید؟</string>
    <string name="originLocationIsSelect">مبدا انتخاب شده است، آیا میخواهید مبدا را تغییر بدهید؟</string>
    <string name="destinationLocationIsSelect">مقصد انتخاب شده است، برای تغییر آن دکمه برگشت را بزنید</string>
    <string name="pleaseChooseOriginLocation">لطفا مبدا را انتخاب نمایید</string>
    <string name="pleaseChooseDestinationLocation">لطفا مقصد را انتخاب نمایید</string>
    <string name="pleaseSelectPassenger">لطفا حداقل 1 مسافر را انتخاب نمایید</string>
    <string name="pleaseCompleteFollowingSteps">لطفا مراحل زیر را تکمیل کنید</string>
    <string name="youHaveUnreadMessage">شما پیام خوانده نشده دارید</string>
    <string name="empty"> </string>
    <string name="qrCode">QR Code</string>
    <string name="parking">پارکینگ</string>
    <string name="fullName">نام و نام خانوادگی</string>
    <string name="personnelNumber">شماره پرسنلی</string>
    <string name="jobTitle">سمت شغلی</string>
    <string name="jobTitleDot">سمت شغلی :</string>
    <string name="organizationUnit">واحد سازمانی</string>
    <string name="organizationUnitDot">واحد سازمانی :</string>
    <string name="organizationPhone">شماره داخلی</string>
    <string name="organizationPhoneDot">شماره داخلی :</string>
    <string name="mobile">شماره موبایل</string>
    <string name="mobileDot">شماره موبایل :</string>
    <string name="showOnMap">نمایش در نقشه</string>
    <string name="chooseNavigationMap">انتخاب یک برنامه مسیریاب</string>
    <string name="sendNotification">ارسال نوتیفیکیشن</string>
    <string name="logoDescription">logo</string>
    <string name="closeDescription">close</string>
</resources>