<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    
    <data>
        
        <variable
            name="title"
            type="String" />

        <variable
            name="icon"
            type="Integer" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:maxHeight="@dimen/_200sdp"
        app:cardCornerRadius="@dimen/_10sdp"
        android:layout_marginHorizontal="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/drawable_confirm">

                <ImageView
                    android:id="@+id/imageViewClose"
                    android:layout_width="@dimen/_17sdp"
                    android:layout_height="@dimen/_17sdp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:src="@drawable/ic_close"
                    android:layout_marginVertical="@dimen/_5sdp"
                    android:layout_marginHorizontal="@dimen/_5sdp"
                    android:scaleType="fitEnd"
                    app:tint="@color/textViewColor1"
                    android:contentDescription="@string/closeDescription"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/imageViewClose"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginVertical="@dimen/_7sdp"
                    android:layout_marginHorizontal="@dimen/_5sdp"
                    android:textColor="@color/textViewColor1"
                    android:textSize="@dimen/_12sdp"
                    android:fontFamily="@font/kalameh_bold"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:text="@string/confirmFavPlace"/>

            </androidx.constraintlayout.widget.ConstraintLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="@dimen/_10sdp"
                android:padding="@dimen/_5sdp"
                android:gravity="end"
                android:background="@drawable/drawable_spinner">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/imageViewClose"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginVertical="@dimen/_7sdp"
                    android:layout_marginHorizontal="@dimen/_5sdp"
                    android:textColor="@color/textViewColor2"
                    android:textSize="@dimen/_12sdp"
                    android:fontFamily="@font/kalameh_bold"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:text="@string/enterPlaceName"/>


                <EditText
                    android:id="@+id/editTextName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:maxLength="30"
                    android:textSize="@dimen/_10sdp"
                    android:textColor="@color/textViewColor2"
                    android:hint="@string/placeName"
                    android:inputType="none"
                    android:autofillHints="reasonText" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/_10sdp"
                android:padding="@dimen/_5sdp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonSend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/buttonNo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/constraintLayoutHeader"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:minWidth="@dimen/_80sdp"
                    android:textSize="@dimen/_12sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingBottom="@dimen/_5sdp"
                    android:fontFamily="@font/kalameh_semibold"
                    app:cornerRadius="@dimen/_5sdp"
                    android:textColor="@color/textViewColor2"
                    android:text='@string/send' />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/buttonYes"
                    app:layout_constraintTop_toTopOf="@id/buttonYes"
                    app:layout_constraintBottom_toBottomOf="@id/buttonYes"
                    android:minWidth="@dimen/_80sdp"
                    android:textSize="@dimen/_12sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingBottom="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:fontFamily="@font/kalameh_semibold"
                    app:cornerRadius="@dimen/_5sdp"
                    android:textColor="@color/textViewColor2"
                    android:text='@string/cancel' />

            </LinearLayout>



        </LinearLayout>

    </androidx.cardview.widget.CardView>

</layout>
