<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.zarholding.zar.viewmodel.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutParent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/drawable_splash_gradiant">

        <FrameLayout
            android:id="@+id/frameLayoutLogo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintWidth_percent="0.3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/solid_white"
                android:contentDescription="@string/logoDescription"/>

        </FrameLayout>

        <TextView
            android:id="@+id/textViewWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/frameLayoutLogo"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/welcomeToApp"
            android:textSize="@dimen/_10sdp"
            android:textColor="@color/textViewColor1"
            android:fontFamily="@font/kalameh_semibold"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/textViewWelcome"
            app:layout_constraintBottom_toTopOf="@id/linearLayoutFooter"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/drawable_login_footer">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_15sdp">

                    <TextView
                        android:id="@+id/textViewEnterUserPass"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:text="@string/pleaseEnterUserPass"
                        android:textSize="@dimen/_10sdp"
                        android:textColor="@color/textViewColor2"
                        android:fontFamily="@font/kalameh_light"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayoutUserName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/textViewEnterUserPass"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="@dimen/_15sdp"
                        app:boxCornerRadiusBottomEnd="@dimen/_5sdp"
                        app:boxCornerRadiusBottomStart="@dimen/_5sdp"
                        app:boxCornerRadiusTopEnd="@dimen/_5sdp"
                        app:boxCornerRadiusTopStart="@dimen/_5sdp"
                        app:boxStrokeColor="@color/editTextBorder"
                        app:hintTextColor="@color/editTextBorder"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/textInputEditTextUserName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start|center_vertical"
                            android:hint="@string/userName"
                            android:inputType="none"
                            android:maxLength="20"
                            android:singleLine="true"
                            android:textSize="@dimen/_10sdp"
                            android:text="@={viewModel.userName}"
                            android:fontFamily="@font/kalameh_light"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayoutPasscode"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/textInputLayoutUserName"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="@dimen/_10sdp"
                        app:boxCornerRadiusBottomEnd="@dimen/_5sdp"
                        app:boxCornerRadiusBottomStart="@dimen/_5sdp"
                        app:boxCornerRadiusTopEnd="@dimen/_5sdp"
                        app:boxCornerRadiusTopStart="@dimen/_5sdp"
                        app:passwordToggleEnabled="true"
                        android:layoutDirection="rtl"
                        app:boxStrokeColor="@color/editTextBorder"
                        app:hintTextColor="@color/editTextBorder"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/textInputEditTextPasscode"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start|center_vertical"
                            android:inputType="textPassword"
                            android:hint="@string/passcode"
                            android:maxLength="20"
                            android:singleLine="true"
                            android:textSize="@dimen/_10sdp"
                            android:text="@={viewModel.password}"
                            android:fontFamily="@font/kalameh_light"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.zarholding.zar.view.custom.ZarButton
                        android:id="@+id/buttonLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="@id/textInputLayoutPasscode"
                        app:layout_constraintTop_toBottomOf="@id/textInputLayoutPasscode"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:minWidth="@dimen/_100sdp"
                        android:textSize="@dimen/_12sdp"
                        android:paddingTop="@dimen/_5sdp"
                        android:paddingBottom="@dimen/_5sdp"
                        android:fontFamily="@font/kalameh_semibold"
                        app:cornerRadius="@dimen/_5sdp"
                        android:textColor="@color/textViewColor2"
                        android:text='@string/enter' />



                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/buttonFingerLogin"
                        android:layout_width="@dimen/_50sdp"
                        android:layout_height="0dp"
                        app:layout_constraintTop_toTopOf="@id/buttonLogin"
                        app:layout_constraintBottom_toBottomOf="@id/buttonLogin"
                        app:layout_constraintStart_toEndOf="@id/buttonLogin"
                        android:layout_marginHorizontal="@dimen/_10sdp"
                        android:minWidth="@dimen/_100sdp"
                        android:textSize="@dimen/_12sdp"
                        android:paddingTop="@dimen/_5sdp"
                        android:paddingBottom="@dimen/_5sdp"
                        android:fontFamily="@font/kalameh_semibold"
                        app:cornerRadius="@dimen/_5sdp"
                        android:textColor="@color/textViewColor2"
                        app:icon="@drawable/ic_finger_print"
                        app:iconTint="@color/profileIconColor2"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </ScrollView>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/linearLayoutFooter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/loginFooterColor">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/textViewFooter"
                android:layout_marginBottom="@dimen/_3sdp"
                android:alpha="0.5"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_5sdp"
                android:text="@string/designer"
                android:textSize="@dimen/_8sdp"
                android:textColor="@color/textViewFooter"
                android:fontFamily="@font/kalameh_light"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
